error.txt
webcam.cpp: In function ‘int main(int, char**)’:
webcam.cpp:63:18: error: cannot convert ‘main(int, char**)::<lambda(gpointer)>’ to ‘GSourceFunc {aka int (*)(void*)}’ for argument ‘2’ to ‘guint g_timeout_add(guint, GSourceFunc, gpointer)’
     }, speedLabel);
                  ^
